--- a/src/app/components/ingreso-vehiculo/ingreso-vehiculo.component.html
+++ b/src/app/components/ingreso-vehiculo/ingreso-vehiculo.component.html
@@ -14,6 +14,16 @@
                             style="height: 100%; overflow: hidden;">
                             <div class="simplebar-content" style="padding: 25px;">
                                 <div class="todo-menu">
+                                    
+                                        <div class="wrap2">
+                                            <span (click)="add()" class="button">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#00A8C6" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
+                                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" fill="#f1f1fc"/>
+                                                </svg>&nbsp;Crear Campo
+                                            </span>
+                                        </div>
+
+                                    <br><br>
                                     <form [formGroup]="miFormulario" (ngSubmit)="crear()">
                                         <div class="form-group">
                                             <label>Placas</label>
@@ -43,31 +53,42 @@
                                                 </div>
                                             </div>
                                         </div>
-                                        <div class="row row-cols-2">
-                                            <div class="col">
-                                                <div class="form-group">
-                                                    <div formArrayName="csalida">
-                                                        <div 
-                                                            *ngFor="let item of getCodigos.controls; let pointIndex =index"
-                                                            [formGroupName]="pointIndex"
-                                                        >
-                                                            <input type="text" formControlName="csalida"
-                                                            class="form-control"
-                                                            placeholder="Ingrese acompañante"
-                                                            >
-                                                            <br>
-                                                        </div>
+                                        <div class="row ">
+                                            <div class="">
+                                                <div formArrayName="csalida">
+                                                    <div 
+                                                        *ngFor="let item of getControls(); let pointIndex =index"
+                                                        [formGroupName]="pointIndex"
+                                                    >
                                                         
+
+
+                                                        <div class="input-group mb-3">
+                                                            <div class="input-group-prepend">
+                                                                <a class="btn btn-outline-primary"   (click)="eliminar(pointIndex)">
+                                                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d68a36" class="bi bi-trash" viewBox="0 0 16 16">
+                                                                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z" fill="#ed0808"/>
+                                                                        <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z" fill="#ed0808"/>
+                                                                    </svg>
+                                                                </a>
+                                                            </div>
+                                                            <input type="text" formControlName="acompanante"
+                                                                class="form-control form-control-lg"
+                                                                placeholder="Ingrese acompañante"
+                                                            >
+                                                        </div>
+
+
+                                                        <!-- <a  (click)="add()" data-toggle="tooltip" data-placement="top" title="Agregar Campos">
+                                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#d68a36" class="bi bi-trash" viewBox="0 0 16 16">
+                                                                <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5Zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6Z" fill="#ed0808"/>
+                                                                <path d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1ZM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118ZM2.5 3h11V2h-11v1Z" fill="#ed0808"/>
+                                                            </svg>
+                                                        </a> -->
+                                                    
                                                     </div>
-                                                    <a  (click)="add()" data-toggle="tooltip" data-placement="top" title="Agregar Campos">
-                                                        <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="#00A8C6" class="bi bi-plus-circle-fill" viewBox="0 0 16 16">
-                                                            <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM8.5 4.5a.5.5 0 0 0-1 0v3h-3a.5.5 0 0 0 0 1h3v3a.5.5 0 0 0 1 0v-3h3a.5.5 0 0 0 0-1h-3v-3z" fill="#00A8C6"/>
-                                                          </svg>
-                                                    </a>
                                                 </div>
-                                            </div>
-                                            
-                                            
+                                            </div> 
                                         </div>
                                         <button type="submit"
                                             class="btn btn-primary">Guardar</button>
@@ -126,20 +147,23 @@
                                 <div class="simplebar-content-wrapper"
                                     style="height: 100%; overflow: hidden scroll;">
                                     <div class="simplebar-content" style="padding: 0px;">
-                                        <li class="todo-list-item">
+                                        <li class="todo-list-item" *ngFor="let item of registros">
                                             <div class="todo-item-title">
                                                 <img src="assets\img\user1.jpg"
                                                     data-toggle="tooltip" data-placement="top"
                                                     title="" alt="image"
                                                     data-original-title="Sarah Taylor">
-                                                <h3>Placa</h3>
-                                                <p>kilometraje</p>
+                                                <h3>{{item.vehiculo}}</h3>
+                                                <p>Piloto : {{item.piloto}}</p>
+                                                <p>Km Salida : {{item.kmsalida}}</p>
+                                                <p>Acompañantes : {{item.csalida}}</p>
+                                                <p>Creado : {{horaMes(item.createdAt)}}</p>
                                             </div>
 
                                             <div class="todo-item-action">
-                                                <a  class="edit"><i
+                                                <a (click)="egreso(item)" class="edit"><i
                                                         class=" bx bxs-paper-plane"></i></a>
-                                                <a  class="delete"><i
+                                                <a (click)="eliminarVehiculo(item)" class="delete"><i
                                                         class="bx bx-trash"></i></a>
                                             </div>
                                         </li>
@@ -166,6 +190,6 @@
         </div>
     </div>
 </div>
-
+<app-modal-editar-vehiculo></app-modal-editar-vehiculo>
 
 
