--- a/src/styles.css
+++ b/src/styles.css
@@ -34,3 +34,19 @@
       width: 100%;
     }
   }
+
+  button {
+    color: #f1f1fc;
+    background: #268fd4;
+  background: linear-gradient(90deg, rgb(27, 104, 219) 0%, rgb(23, 172, 218) 100%);
+    border: none;
+    border-radius: 1000px;
+    box-shadow: 12px 12px 24px rgba(16, 110, 199, 0.64);
+    transition: all 0.3s ease-in-out 0s;
+    cursor: pointer;
+    outline: none;
+    position: relative;
+    padding: 10px;
+  }
+
+ 
