terminando el modulo de agentes

--- a/src/app/components/agentes-vacaciones/agentes-vacaciones.component.html
+++ b/src/app/components/agentes-vacaciones/agentes-vacaciones.component.html
@@ -51,10 +51,9 @@
                            
                         </td>
                         <td>
-                            <a  class="iconos observar mr-2"   data-toggle="tooltip" data-placement="top" title="Subir Archivo"><i class="bx bx-cloud-upload"></i></a>
-                            <a  class="iconos observar mr-2"   data-toggle="tooltip" data-placement="top" title="Ver Novedad"><i class=" bx bxs-low-vision"></i></a>
-                            <a  class="iconos editar mr-2"  ><i class="bx bx-edit-alt"  data-toggle="tooltip" data-placement="top" title="Editar Novedad"></i></a>
-                            <a  class="iconos eliminar"  data-toggle="tooltip" data-placement="top" title="Eliminar Novedad"><i class="bx bx-trash"></i></a>
+                            <a  class="iconos observar mr-2" (click)="abrirModal(item)"  data-toggle="tooltip" data-placement="top" title="Ver Novedad"><i class=" bx bxs-low-vision"></i></a>
+                            <a  class="iconos editar mr-2" (click)="abrirModalEditar(item)" ><i class="bx bx-edit-alt"  data-toggle="tooltip" data-placement="top" title="Editar Novedad"></i></a>
+                            <a  (click)="eliminarAgente(item)" class="iconos eliminar"  data-toggle="tooltip" data-placement="top" title="Eliminar Agente"><i class="bx bx-trash"></i></a>
                         </td>
                     </tr>
                 </tbody>
