--- a/src/app/components/registro-agente/registro-agente.component.html
+++ b/src/app/components/registro-agente/registro-agente.component.html
@@ -182,10 +182,10 @@
                         </td>
                         <!-- <td *ngIf="item.status == '1' ? 'Activo':''" style="color:cornflowerblue">Activo</td> -->
                         <td>
-                            <a  class="iconos observar mr-2"   data-toggle="tooltip" data-placement="top" title="Subir Archivo"><i class="bx bx-cloud-upload"></i></a>
-                            <a  class="iconos observar mr-2"   data-toggle="tooltip" data-placement="top" title="Ver Novedad"><i class=" bx bxs-low-vision"></i></a>
-                            <a  class="iconos editar mr-2"  ><i class="bx bx-edit-alt"  data-toggle="tooltip" data-placement="top" title="Editar Novedad"></i></a>
-                            <a  class="iconos eliminar"  data-toggle="tooltip" data-placement="top" title="Eliminar Novedad"><i class="bx bx-trash"></i></a>
+                          
+                             <a  class="iconos observar mr-2" (click)="abrirModal(item)"  data-toggle="tooltip" data-placement="top" title="Ver Agente"><i class=" bx bxs-low-vision"></i></a>
+                            <a  class="iconos editar mr-2" (click)="abrirModalEditar(item)" ><i class="bx bx-edit-alt"  data-toggle="tooltip" data-placement="top" title="Editar Agente"></i></a>
+                            <a  (click)="eliminarAgente(item)" class="iconos eliminar"  data-toggle="tooltip" data-placement="top" title="Eliminar Agente"><i class="bx bx-trash"></i></a>
                         </td>
                     </tr>
                 </tbody>
